--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.0",
-    "sass": "^1.68.0",
+    "sass": "^1.69.5",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "web-vitals": "^2.1.4"
@@ -50,6 +50,8 @@
     ]
   },
   "devDependencies": {
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
